Add Lombok models, DynamoDB services, and tests
Co-authored-by: johnboyce <847974+johnboyce@users.noreply.github.com>